tests/paczka1/fuzzy1/99158984.err
Error in line 4: A7 S266 83,2
Error in line 22: A7 S266 97,4
Error in line 24: A7 S266 313,6
Error in line 26: rLvqE8 A739 44,96
Error in line 27: A7 A739 32,0
Error in line 20: rLvqE8 A116 32,9
Error in line 36: A7 A739 115,5
Error in line 38: QQ341VYYBRq A739 39,56
